Se creó con Colab

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7XjB1X7QXJfUq/8tASsgh",
+      "authorship_tag": "ABX9TyMrz7ld9Zs/+BETQGcFL46k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,6 +164,16 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this notebook, we explore various aspects of the Data Science ecosystem, including tools, libraries, and programming languages commonly used by Data Scientists. Additionally, we provide practical examples of basic arithmetic operations and conversions in Python to solidify understanding. Below are the key objectives covered in this notebook:\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Xu4canRlwGt0"
+      }
     },
     {
       "cell_type": "markdown",
