Se creó con Colab

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrz7ld9Zs/+BETQGcFL46k",
+      "authorship_tag": "ABX9TyOEBVKgO9dYXAWS4SBM5GAb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,11 +38,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The tools and ecosystems within the field of Data Science provide the foundation for collecting, processing, analyzing, and visualizing data to make data-driven decisions.\n",
-        "In this notebook, Data Science Tools and Ecosystem are summarized.\n"
+        "The tools and ecosystems within the field of Data Science provide the foundation for collecting, processing, analyzing, and visualizing data to make data-driven decisions. In this notebook, we explore various aspects of the Data Science ecosystem, including tools, libraries, and programming languages commonly used by Data Scientists. Additionally, we provide practical examples of basic arithmetic operations and conversions in Python to solidify understanding. Below are the key objectives covered in this notebook:\n",
+        "\n"
       ],
       "metadata": {
-        "id": "oKJnmtU6zk2v"
+        "id": "Xu4canRlwGt0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Objectives:**\n",
+        "- List popular languages for Data Science\n",
+        "- Identify commonly used libraries in Data Science\n",
+        "- Highlight open-source Data Science tools\n",
+        "- Provide examples of simple arithmetic expressions in Python\n"
+      ],
+      "metadata": {
+        "id": "Rz2pCN9T1x3b"
       }
     },
     {
@@ -114,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jTt3nnFz1MqW",
-        "outputId": "f6beb192-a4fe-4e89-c3aa-8290f17cb301"
+        "outputId": "6b663ae0-66c8-471a-bc41-e888bcfa1cba"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,7 +139,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     },
@@ -149,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u8GdU6Vm1XnU",
-        "outputId": "8b274e99-ad06-4f16-c9b9-60c47bcad6b4"
+        "outputId": "620e894c-5f67-4f4b-f633-134d5b5e0cd9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,32 +174,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "In this notebook, we explore various aspects of the Data Science ecosystem, including tools, libraries, and programming languages commonly used by Data Scientists. Additionally, we provide practical examples of basic arithmetic operations and conversions in Python to solidify understanding. Below are the key objectives covered in this notebook:\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "Xu4canRlwGt0"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Objectives:**\n",
-        "- List popular languages for Data Science\n",
-        "- Identify commonly used libraries in Data Science\n",
-        "- Highlight open-source Data Science tools\n",
-        "- Provide examples of simple arithmetic expressions in Python\n"
-      ],
-      "metadata": {
-        "id": "Rz2pCN9T1x3b"
-      }
     },
     {
       "cell_type": "markdown",
